<?xml version="1.0"?>
<package format="2">
  <name>lidar_processing</name>
  <version>0.0.1</version>
  <description>Package to filtering 3D point clouds for autodrive</description>
  <author email="fire3577@naver.com">BEAM</author>
  <maintainer email="fire3577@naver.com">BEAM</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pcl_conversion</build_depend>

  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>pcl_conversion</build_export_depend>
  
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>pcl_conversion</exec_depend>


  <export>
    <!-- -->
  </export>
</package>